--- a/subjectandclass.html
+++ b/subjectandclass.html
@@ -8,8 +8,6 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<h1>Western Online Time Table</h1>
-<button onclick="showAllSubjectAndClass()" id="allSubAndClassBtn">See all Subjects and Classes</button>
-<script src="script.js"></script> 
+<h1>All Subject Codes and Descriptions</h1>
 </body>
 </html>
