added get request to backend for all subjects and courses

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <h1>Western Online Time Table</h1>
-<button onclick="showAllSubjectAndClass()" id="allSubAndClassBtn">See all Subjects and Classes</button>
+<button onclick="displayCourses()" id="allSubAndClassBtn">See all Subjects and Classes</button>
+<div id="courseDiv" class="divStyle"></div>
 <script src="script.js"></script> 
 </body>
 </html>
