added backend functionality for getting timetable entries

--- a/static/index.html
+++ b/static/index.html
@@ -11,18 +11,17 @@
 <h1>Western Online Time Table</h1>
 <table>
 <tr>
-    <td>
+    
       <button onclick="displayCourses()">Click to see all subjects and classes</button>
       <div id="courseAndSubjDiv" class="div1"></div>
-    </td>
-    <td>
+</tr>
+<tr>
     <p class="searchBar">Get all course codes for a given subject code:</p>
-    <form class="searchBar">
-    <input type="text" placeholder="Enter Subject Code" id="subj">
-    <button onclick="searchForCourses()">Search</button>
-    </form>
+    <div class="searchBar">
+        <input type="text" placeholder="Enter Subject Code" id="subj">
+        <button onclick="searchForCourses()">Search</button>
+    </div>
     <div id="courseDiv" class="div1"></div>
-</td>
 </tr>
 </table>
 <script src="script.js"></script> 
