added frontend functionality for deleting schedules

--- a/static/index.html
+++ b/static/index.html
@@ -61,7 +61,7 @@
         <div>
             <input type="text" placeholder="Enter Schedule Name" id="sch3">
             <button onclick="deleteSched()">Delete Schedule</button>
-            <div id="deleteschedDiv" class="div2"></div>
+            <div id="deleteSchedDiv" class="div2"></div>
         </div>
         <hr>
     </td>
