added frontend functionality to get all schedules+numofcourses

--- a/static/index.html
+++ b/static/index.html
@@ -53,7 +53,7 @@
         <b>See courses saved in a schedule:</b>
         <div>
             <input type="text" placeholder="Enter Schedule Name" id="sch2">
-            <button onclick="getSchedCourse()">Get Courses</button>
+            <button onclick="getSchedCourses()">Get Courses</button>
             <div id="getcrsesDiv" class="div3"></div>
         </div>
         <hr>
