--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
     <div id="courseDiv" class="div1"></div>
     </td>
     <td>
-        <b>See courses saved in a schedule:</b>
+        <b>See courses (and timetable) saved in a schedule:</b>
         <div>
             <input type="text" placeholder="Enter Schedule Name" id="sch2">
             <button onclick="getSchedCourses()">Get Courses</button>
